Update product cards display

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- شعار -->
     <div class="badge" id="badgeText">
-      <span class="sparkle">✳️</span>
+      <span class="sparkle">❁</span>
       <span id="badgeTextContent">Smart Deal Finder</span>
     </div>
 
@@ -36,6 +36,15 @@
 
     <!-- مكان عرض النتائج -->
     <div id="resultsBox" style="margin-top:20px;"></div>
+<!-- ===== LEGAL FOOTER ===== -->
+<footer class="legal-footer">
+  <a href="affiliate.html">Affiliate Disclosure</a>
+  <span>•</span>
+  <a href="privacy.html">Privacy Policy</a>
+  <span>•</span>
+  <a href="terms.html">Terms of Service</a>
+</footer>
+
 
   </div>
 
